backtohome pour hum et correction bug double slash

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div id="gameBigparent">
         <div id="gameContainer">
-            <div class="game" onclick="start('/hum/monster.html')">Hum</div>
-            <div class="game" onclick="start('/lag/ball.html')">Lag</div>
-            <div class="game" onclick="start('/lify/index.html')">Lify</div>
-            <div class="game" onclick="start('/snake/index.html')">Snake</div>
-            <div class="game" onclick="start('/upside/UPSIDE.html')">UPSIDE</div>
+            <div class="game" onclick="start('hum/monster.html')">Hum</div>
+            <div class="game" onclick="start('lag/ball.html')">Lag</div>
+            <div class="game" onclick="start('lify/index.html')">Lify</div>
+            <div class="game" onclick="start('snake/index.html')">Snake</div>
+            <div class="game" onclick="start('upside/UPSIDE.html')">UPSIDE</div>
         </div>
     </div>
     <script src="index.js"></script>
