--- a/hum/monster.html
+++ b/hum/monster.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>monster</title>
     <link rel="stylesheet" href="monster.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+
 <body>
+    <div id="backtohome"><span class="material-symbols-outlined">
+            home
+        </span></div>
     <script src="monster.js"></script>
 </body>
+
 </html>
