--- a/snake/index.html
+++ b/snake/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+    <div id="backtohome"><span class="material-symbols-outlined">
+        home
+    </span></div>
     <script src="index.js"></script>
 </body>
 </html>
