--- a/index.html
+++ b/index.html
@@ -6,18 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-    <div id="gameBigparent">
-        <div id="gameContainer">
-            <div class="game" onclick="start('hum/monster.html')">Hum</div>
-            <div class="game" onclick="start('lag/ball.html')">Lag</div>
-            <div class="game" onclick="start('lify/index.html')">Lify</div>
-            <div class="game" onclick="start('snake/index.html')">Snake</div>
-            <div class="game" onclick="start('upside/UPSIDE.html')">UPSIDE</div>
-        </div>
-    </div>
     <script src="index.js"></script>
 </body>
 
