add party to lify

--- a/lify/index.html
+++ b/lify/index.html
@@ -40,6 +40,7 @@
         };
     </script>
     <script src="make.js"></script>
+    <script src="party.js"></script>
     <script src="megabouncyfisureunivers.js"></script>
     <script src="purplewater.js"></script>
     <script src="bouncecho.js"></script>
