--- a/démineur/index.html
+++ b/démineur/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Démineur</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <form id="form" method="dialog">
-        <label for="width">Largeur</label>
-        <input type="number" id="width" name="width" min="1" max="50" value="18">
-        <label for="height">Hauteur</label>
-        <input type="number" id="height" name="height" min="1" max="50" value="14">
-        <label for="mines">Mines</label>
-        <input type="number" id="mines" name="mines" min="1" max="500" value="40">
+
+<body>  
+    <form method="dialog" id="form">
+        <select id="difficulty" name="difficulty">
+            <option value="easy">Facile</option>
+            <option value="medium">Moyen</option>
+            <option value="hard">Difficile</option>
+            <option value="impossible">Impossible</option>
+            <option value="custom">Personnalisé</option>
+        </select>
         <button type="submit" onclick="startGame()">Jouer</button>
     </form>
     <script src="index.js"></script>
 </body>
+
 </html>
