--- a/démineur/index.html
+++ b/démineur/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Démineur</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>  
+    <div id="backtohome"><span class="material-symbols-outlined">
+        home
+    </span></div>
     <form method="dialog" id="form">
         <select id="difficulty" name="difficulty">
             <option value="easy">Facile</option>
