--- a/zoom/index.html
+++ b/zoom/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="backtohome">Home</div>
     <input type="range" id="valueBar" min="0.0001" max="200" value="0.0001">
     <script src="index.js"></script>
 </body>
