--- a/shapes/index.html
+++ b/shapes/index.html
@@ -6,9 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
+    <div id="toolsbar">
+        <div id="home">
+            <span class="material-symbols-outlined">
+                home
+            </span>
+        </div>
+        <div id="tools">
+            <span class="material-symbols-outlined">
+                settings
+            </span>
+        </div>
+        <div id="refresh">
+            <span class="material-symbols-outlined">
+                refresh
+            </span>
+        </div>
+        <div id="download">
+            <span class="material-symbols-outlined">
+                download
+            </span>
+        </div>
+    </div>
+    <form id="settingsForm">
+        <label for="size">Size of edges (in px)</label>
+        <input type="number" id="size" name="size" aria-valuemin="1" aria-valuemax="500" value="10">
+        <label for="speed">Time between drawing each shape (in ms)</label>
+        <input type="number" id="speed" name="speed" aria-valuemin="0" aria-valuemax="10000" value="0">
+        <label for="space">Space between 2 shape (in px)</label>
+        <input type="number" id="space" name="space" aria-valuemin="-1" aria-valuemax="50" value="4">
+        <div>
+            <label>Choose a color by step</label>
+            <div>
+                <input type="color" value="#9cb7ff">
+                <input type="color" value="#7887f8">
+                <input type="color" value="#575af1">
+                <input type="color" value="#9c3bdf">
+                <input type="color" value="#db1ece">
+            </div>
+            <div>
+                <input type="color" value="#c51d92">
+                <input type="color" value="#b11c5b">
+                <input type="color" value="#940e2a">
+                <input type="color" value="#7d0303">
+                <input type="color" value="#4e0000">
+            </div>
+        </div>
+        <label for="shape">Choose a shape to draw:</label>
+        <select id="shape" name="shape">
+            <option value="triangle">▲</option>
+            <option value="square">■</option>
+        </select>
+        <button type="submit" id="settingsSubmit">Apply</button>
+    </form>
+
     <canvas id="myCanvas"></canvas>
     <script src="index.js"></script>
 </body>
